[gd_scene load_steps=23 format=3 uid="uid://bqc2se1sraa8n"]

[ext_resource type="PackedScene" uid="uid://21c3cd4vt6wo" path="res://scenes/characters/enemies/BasicEnemy.tscn" id="1_fjv1u"]
[ext_resource type="Script" path="res://scenes/characters/enemies/MoleEnemy.gd" id="2_5idro"]
[ext_resource type="Texture2D" uid="uid://ifsbxvd3epcu" path="res://assets/characters/Mole.png" id="3_cctel"]
[ext_resource type="AudioStream" uid="uid://bappy10m4k8k5" path="res://assets/sounds/Shot_Enemy.mp3" id="4_rnwla"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j52ux"]
atlas = ExtResource("3_cctel")
region = Rect2(0, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqpb"]
atlas = ExtResource("3_cctel")
region = Rect2(8, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5poeu"]
atlas = ExtResource("3_cctel")
region = Rect2(16, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu48g"]
atlas = ExtResource("3_cctel")
region = Rect2(24, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0mio"]
atlas = ExtResource("3_cctel")
region = Rect2(32, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv8s5"]
atlas = ExtResource("3_cctel")
region = Rect2(40, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h81b"]
atlas = ExtResource("3_cctel")
region = Rect2(0, 16, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qshy2"]
atlas = ExtResource("3_cctel")
region = Rect2(8, 16, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhey4"]
atlas = ExtResource("3_cctel")
region = Rect2(16, 16, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2lo2"]
atlas = ExtResource("3_cctel")
region = Rect2(24, 16, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0auyb"]
atlas = ExtResource("3_cctel")
region = Rect2(32, 16, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x610x"]
atlas = ExtResource("3_cctel")
region = Rect2(40, 16, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_541w4"]
atlas = ExtResource("3_cctel")
region = Rect2(48, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgawn"]
atlas = ExtResource("3_cctel")
region = Rect2(56, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaipb"]
atlas = ExtResource("3_cctel")
region = Rect2(48, 16, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn4ap"]
atlas = ExtResource("3_cctel")
region = Rect2(56, 16, 8, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f7003"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j52ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5poeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu48g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0mio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv8s5")
}],
"loop": true,
"name": &"dig",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h81b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qshy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhey4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2lo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0auyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x610x")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_541w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgawn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaipb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn4ap")
}],
"loop": false,
"name": &"out",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j30y"]
size = Vector2(10, 11)

[node name="MoleEnemy" instance=ExtResource("1_fjv1u")]
script = ExtResource("2_5idro")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_f7003")
animation = &"dig"

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_4j30y")

[node name="DigTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="ShotSound" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource("4_rnwla")
max_distance = 120.0
panning_strength = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DigTimer" to="." method="_on_dig_timer_timeout"]
